--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,9 @@
 name: Build-Push-Deploy #name of the workflow
 on: 
   push:
-    branch: [ "master" ]
+    branches:
+      - master
+      - main
 
 jobs:
   build_push_deploy:
